Fix monitor baud rate

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,4 @@
 platform = https://github.com/maxgerhardt/platform-ststm32.git#rak3172
 board = rak3172_evalboard
 framework = arduino
+monitor_speed = 115200
